# rustend

./: Cargo.toml  LICENSE-MIT.txt  README.md  flake.nix  rr.nu  start.nu
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-18-github-actions-ci.md  2026-05-18-rustend-implementation.md  2026-06-19-proxy-auth.md
docs/superpowers/specs/: 2026-05-16-rustend-design.md  2026-05-18-github-actions-ci-design.md  2026-06-19-proxy-auth-design.md
rustend-client/: Cargo.toml
rustend-client/src/: error.rs  lib.rs  repository.rs  schema.rs  sync.rs  types.rs
rustend-client/src/idb/: files.rs  mod.rs  object_heads.rs  open.rs  revisions.rs  serde_util.rs  sync_state.rs
rustend-client/tests/: repository.rs
rustend-core/: Cargo.toml
rustend-core/src/: content.rs  filter.rs  ids.rs  lib.rs  lineage.rs  protocol.rs  revision.rs
rustend-server/: Cargo.toml
rustend-server/migrations/: 001_initial.sql  002_parent_position.sql  003_proxy_auth.sql
rustend-server/src/: auth.rs  error.rs  lib.rs  store.rs
rustend-server/src/db/: clients.rs  files.rs  mod.rs  object_heads.rs  pull.rs  push.rs  revisions.rs  transactions.rs
rustend-server/src/handlers/: clients.rs  files.rs  mod.rs  objects.rs  pull.rs  push.rs  whoami.rs
rustend-server/tests/: integration.rs
