[package]
name = "rustend-client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rustend-core = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
idb = "0.6"
gloo-net = { version = "0.6", features = ["http", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
uuid = { workspace = true, features = ["js"] }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
rustend-core = { workspace = true }
